fix: improve readability of the list item
Also improve the look on smaller devices

--- a/src/components/question-list-item/question-list-item.scss
+++ b/src/components/question-list-item/question-list-item.scss
@@ -17,10 +17,11 @@
   padding-bottom: 10px;
 }
 .question-detail {
-  font-size: large;
+  font-size: 16px;
   color: black;
   text-align: justify;
   hyphens: auto;
+
 }
 
 .question-list-item-container {
@@ -29,23 +30,11 @@
   flex-wrap: wrap;
 }
 
-.tags {
-  overflow-x: auto;
-
-  ion-text {
-    padding-right: 10px;
-  }
-}
-
-.meta ion-col ion-chip {
+.tags ion-chip {
   height: 1.8em;
-  padding-left: 0;
-  padding-right: 3px;
-
-  ion-icon {
-    margin-left: 3px;
-  }
 }
+
+
 
 .stats-label {
   padding-right: 0.5em;
@@ -72,7 +61,3 @@ ion-item::part(native) {
   padding-left: 0;
 }
 
-ion-chip {
-  padding-inline-start: 6px;
-  padding-inline-end: 6px;
-}
